k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: server-cluster-ip-service
              port:
                number: 5000
        - path: /
          pathType: Prefix
          backend:
            service:
              name: client-cluster-ip-service
              port:
                number: 80
